// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderGame.vue methods 1`] = `
<div>
  <v-app-bar-stub color="grey darken-4" tag="header" extensionheight="48" src="" value="true" class="header-game">
    <div><span id="countdown-text"></span></div>
    <!---->
    <div class="flex-grow-1"></div>
    <div class="round-score-container"><span class="sub-text">ROUND: </span> <span id="roundLabel" class="main-text">
                 / 
            </span></div>
    <div class="round-score-container"><span class="sub-text">DISTANCE: </span> <span class="main-text">NaN km away</span></div>
    <div class="round-points-container"><span class="sub-text">SCORE: </span> <span class="main-text"></span></div>
  </v-app-bar-stub>
</div>
`;

exports[`HeaderGame.vue mounted 1`] = `
<div>
  <v-app-bar-stub color="grey darken-4" tag="header" extensionheight="48" src="" value="true" class="header-game">
    <div><span id="countdown-text">01:00</span></div>
    <!---->
    <div class="flex-grow-1"></div>
    <div class="round-score-container"><span class="sub-text">ROUND: </span> <span id="roundLabel" class="main-text">
                 / 
            </span></div>
    <div class="round-score-container"><span class="sub-text">DISTANCE: </span> <span class="main-text">NaN km away</span></div>
    <div class="round-points-container"><span class="sub-text">SCORE: </span> <span class="main-text"></span></div>
  </v-app-bar-stub>
</div>
`;
